--- a/anesthesiaconsiderations-iOS/Info.plist
+++ b/anesthesiaconsiderations-iOS/Info.plist
@@ -7,13 +7,13 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.anesthesiaconsiderations.anesthesiaconsiderations</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.93</string>
+	<string>0.94</string>
 	<key>CFBundleVersion</key>
-	<string>0.93</string>
+	<string>0.94</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MinimumOSVersion</key>
-	<string>10.0</string>
+	<string>10.2</string>
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
@@ -42,7 +42,7 @@
 	<array>
 		<string>Icon-60@2x.png</string>
 		<string>Icon-76@2x.png</string>
-		<string>Icon-83.5@2x.png</string>
+		<string>Icon-83.5@2x</string>
 	</array>
 </dict>
 </plist>
