--- a/anesthesiaconsiderations-iOS/anesthesiaconsiderations-iOS.csproj
+++ b/anesthesiaconsiderations-iOS/anesthesiaconsiderations-iOS.csproj
@@ -366,7 +366,9 @@
     <Compile Include="WolffParkinsonWhiteSyndrome.cs" />
     <BundleResource Include="testing.png" />
     <BundleResource Include="Tracheoesophageal Fistula.png" />
-    <BundleResource Include="Von_Willebrands_Disease _vWD_Recommended_Dosages.png" />
+    <BundleResource Include="image.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </BundleResource>
     <BundleResource Include="Von_Willebrands_Disease_vWD_Treatment_Choices_Based_on_Sub_types.png" />
     <BundleResource Include="Resources\Icon-120.png" />
     <BundleResource Include="Resources\Icon-152.png" />
@@ -416,6 +418,9 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Xamarin.iOS" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\Von_Willebrands_Disease _vWD_Recommended_Dosages.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.1.114\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.1.114\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
