--- a/anesthesiaconsiderations-iOS/anesthesiaconsiderations-iOS.csproj
+++ b/anesthesiaconsiderations-iOS/anesthesiaconsiderations-iOS.csproj
@@ -358,15 +358,15 @@
     <Compile Include="VenousAirEmbolism.cs" />
     <Compile Include="VonWillebrandsDisease.cs" />
     <Compile Include="WegenersGranulomatosis.cs" />
-    <BundleResource Include="Hemophilia A&amp;B.png" />
-    <BundleResource Include="Mitral Stenosis.png" />
-    <BundleResource Include="Pulmonary Hypertension.png" />
+    <BundleResource Include="hemopheliaab.png" />
+    <BundleResource Include="mitralstenosis.png" />
+    <BundleResource Include="pulmonaryhypertension.png" />
     <BundleResource Include="Von Willebrand%27s Disease %28vWD%29 Recommended Dosages.png" />
-    <BundleResource Include="Von Willebrand%27s Disease %28vWD%29 Treatment Choices Based on Sub-types.png" />
+    <BundleResource Include="treatmentchoices.png" />
     <Compile Include="WolffParkinsonWhiteSyndrome.cs" />
     <BundleResource Include="testing.png" />
-    <BundleResource Include="Tracheoesophageal Fistula.png" />
-    <BundleResource Include="image.png">
+    <BundleResource Include="traecheofistula.png" />
+    <BundleResource Include="recommendeddosages.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </BundleResource>
     <BundleResource Include="Von_Willebrands_Disease_vWD_Treatment_Choices_Based_on_Sub_types.png" />
@@ -379,12 +379,12 @@
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <InterfaceDefinition Include="Resources\LaunchScreen.xib" />
-    <BundleResource Include="Aortic Stenosis.png" />
-    <BundleResource Include="Asthma.png" />
-    <BundleResource Include="Atrial Fibrillation.png" />
-    <BundleResource Include="Chronic Obstructive Lung Disease %28COPD%29.png" />
-    <BundleResource Include="Diabetes Mellitus.png" />
-    <BundleResource Include="Dyspnea in Pregnancy.png" />
+    <BundleResource Include="aorticstenosis.png" />
+    <BundleResource Include="asthma.png" />
+    <BundleResource Include="atrialfibrilation.png" />
+    <BundleResource Include="copd.png" />
+    <BundleResource Include="diabetesmellitus.png" />
+    <BundleResource Include="dyspneainpregnancy.png" />
     <None Include="Entitlements.plist" />
     <ITunesArtwork Include="iTunesArtwork%402x" />
     <None Include="packages.config" />
@@ -421,6 +421,9 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Von_Willebrands_Disease _vWD_Recommended_Dosages.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="insulinmanagement.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.1.114\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.1.114\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
