--- a/anesthesiaconsiderations-iOS/Info.plist
+++ b/anesthesiaconsiderations-iOS/Info.plist
@@ -42,6 +42,7 @@
 	<array>
 		<string>Icon-60@2x.png</string>
 		<string>Icon-76@2x.png</string>
+		<string>Icon-83.5@2x.png</string>
 	</array>
 	<key>NSHomeKitUsageDescription</key>
 	<string>Allows the app to control HomeKit enabled devices.</string>
